--- a/package.json
+++ b/package.json
@@ -11,13 +11,15 @@
     "@apollo/client": "^3.4.11",
     "@quasar/extras": "^1.0.0",
     "@vue/apollo-option": "^4.0.0-alpha.14",
+    "@auth0/auth0-spa-js": "^1.13.3",
     "core-js": "^3.6.5",
     "graphql": "^15.5.3",
     "graphql-tag": "^2.12.5",
     "quasar": "^2.0.0",
     "uuid": "^8.3.2",
     "vue": "^3.0.0",
-    "vue-router": "^4.0.12"
+    "vue-router": "^4.0.12",
+    "vuex": "^4.0.0-0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
